Fixed the services page alignment

--- a/public/css/web/services.css
+++ b/public/css/web/services.css
@@ -23,7 +23,7 @@
 }
 
 .gallery {
-    width: 60%;
+    width: 75%;
     margin: 20px auto;
     align-items: center;
 }
